# FPGA-robotics

./: .clang-format  .gitignore  .gitmodules  README.md  build.sbt  test-file
.bsp/: sbt.json
Blocks/COUNT_4BITS_OUTPUT/: COUNT_4BITS_OUTPUT.ice
Blocks/ESC_CONTROLLER_PWM/: ESC_ACTIVATION.v  ESC_CONTROLLER.ice
Blocks/External_i2c/: WRITE_I2C_MODULE.ice
Blocks/VGA_NUMBERS/: 4xBD_Numbers.ice  (+2 more)
Devices/: README.md
Examples/: README.md
blocks/: README.md
phys_fpga/: README.md
sim_fpga/: .gitignore  README.md
sim_fpga/examples/Richard_example_paper2/ROS_pkg/diffdrive_cam_bot/: package.xml  set_env.sh
sim_fpga/examples/Richard_example_paper2/ROS_pkg/diffdrive_cam_bot/models/ball/: ball.sdf
sim_fpga/examples/Richard_example_paper2/ROS_pkg/diffdrive_cam_bot/models/diffdrive/: model.config  model.sdf  model.world
sim_fpga/examples/Richard_example_paper2/ROS_pkg/diffdrive_cam_bot/models/person/: model.sdf
sim_fpga/examples/Richard_example_paper2/ROS_pkg/diffdrive_cam_bot/plugins/: person.cc
sim_fpga/examples/Richard_example_paper2/ROS_pkg/diffdrive_cam_bot/worlds/: follow_person.world
sim_fpga/paper-FPGA_Robotics-sim-FPGA/paper_ros_ws/diffdrive_cam_bot/: CMakeLists.txt  README  build.sh
sim_fpga/paper-FPGA_Robotics-sim-FPGA/paper_ros_ws/diffdrive_cam_bot/launch/: follow_person.launch  follow_person_turtlebot.launch  main.launch
sim_fpga/paper-FPGA_Robotics-sim-FPGA/paper_ros_ws/diffdrive_cam_bot/models/RedBall/: model.config  model.sdf
sim_fpga/paper-FPGA_Robotics-sim-FPGA/paper_ros_ws/diffdrive_cam_bot/models/ball/: model.config
sim_fpga/paper-FPGA_Robotics-sim-FPGA/paper_ros_ws/diffdrive_cam_bot/models/diffdrive/: cameraBot.sdf  model.sdf.orig
sim_fpga/paper-FPGA_Robotics-sim-FPGA/paper_ros_ws/diffdrive_cam_bot/models/grass_plane/: model.sdf
sim_fpga/paper-FPGA_Robotics-sim-FPGA/paper_ros_ws/diffdrive_cam_bot/models/person/: model.config
sim_fpga/paper-FPGA_Robotics-sim-FPGA/paper_ros_ws/diffdrive_cam_bot/plugins/: person.cc
sim_fpga/paper-FPGA_Robotics-sim-FPGA/paper_ros_ws/diffdrive_cam_bot/src/Robot_home/: model.config  model.sdf
sim_fpga/paper-FPGA_Robotics-sim-FPGA/paper_ros_ws/turtlebot2_urdf_model/: CMakeLists.txt  package.xml
sim_fpga/paper-FPGA_Robotics-sim-FPGA/paper_ros_ws/turtlebot2_urdf_model/launch/: spawn_robot.launch  view_model.launch
sim_fpga/paper-FPGA_Robotics-sim-FPGA/paper_ros_ws/turtlebot2_urdf_model/rviz/: model.rviz
sim_fpga/paper-FPGA_Robotics-sim-FPGA/paper_ros_ws/turtlebot2_urdf_model/urdf/: turtlebot2.urdf
utils/: vhdlrom2vrl.py
(+3033 files in other folders)
